create two seperate input wrappers, mainly for 508 compliance

--- a/src/app/sam-angular-demo/sam-angular-demo.template.html
+++ b/src/app/sam-angular-demo/sam-angular-demo.template.html
@@ -21,7 +21,7 @@
         </li>
         <li>
           <label>Placeholder text</label>
-          <input type="text" [(ngModel)]="selectConfig.placeholder">
+          <input type="text" [(ngModel)]="selectConfig.wrapper.placeholder">
         </li>
         <li>
           <label>Error message text</label>
@@ -91,7 +91,7 @@
         </li>
         <li>
           <label>Hint text</label>
-          <input type="text" [(ngModel)]="radioConfig.wrapper.hint">
+          <input type="text" [(ngModel)]="radioConfig.hint">
         </li>
       </ul>
     </fieldset>
