Hidding logo img until functionality its complete

--- a/src/app/fal/program/program-view.component.html
+++ b/src/app/fal/program/program-view.component.html
@@ -3,7 +3,7 @@
   <!--Sidebar-->
   <aside class="usa-width-one-fourth">
     <br><br>
-    <img src="/assets/logo.png">
+    <!--<img src="/assets/logo.png">-->
     <!--Side Navigation-->
     <nav>
       <ul class="usa-sidenav-list">
