fix the hint text on the demo page

--- a/src/app/sam-angular-demo/sam-angular-demo.template.html
+++ b/src/app/sam-angular-demo/sam-angular-demo.template.html
@@ -91,7 +91,7 @@
         </li>
         <li>
           <label>Hint text</label>
-          <input type="text" [(ngModel)]="radioConfig.hint">
+          <input type="text" [(ngModel)]="radioConfig.wrapper.hint">
         </li>
       </ul>
     </fieldset>
