SGA-169 - graph and table

--- a/src/app/fal/program/program-view.component.html
+++ b/src/app/fal/program/program-view.component.html
@@ -77,38 +77,7 @@
     <section>
       <h2 id="financial-information">Financial Information</h2>
 
-      <svg width="650" height="300"></svg>
-
-      <table>
-        <thead>
-        <tr>
-          <th></th>
-          <th scope="col">FY 15</th>
-          <th scope="col">FY 16 (est.)</th>
-          <th scope="col">FY 17 (est.)</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <th scope="row">Cooperative Agreements</th>
-          <td>8.000.000</td>
-          <td>8.000.000</td>
-          <td>8.000.000</td>
-        </tr>
-        <tr>
-          <th scope="row">Formula Grants</th>
-          <td>294.067.800</td>
-          <td>285.856.800</td>
-          <td>298.839.800</td>
-        </tr>
-        <tr>
-          <th scope="row">Dissemination of Technical Information</th>
-          <td>95.000.000</td>
-          <td>80.000.000</td>
-          <td>70.000.000</td>
-        </tr>
-        </tbody>
-      </table>
+      <div id="visualization"></div>
 
       <h3>Range and Average of Financial Assistance:</h3>
 
