fix the select placeholder on the demo page

--- a/src/app/sam-angular-demo/sam-angular-demo.template.html
+++ b/src/app/sam-angular-demo/sam-angular-demo.template.html
@@ -21,7 +21,7 @@
         </li>
         <li>
           <label>Placeholder text</label>
-          <input type="text" [(ngModel)]="selectConfig.wrapper.placeholder">
+          <input type="text" [(ngModel)]="selectConfig.placeholder">
         </li>
         <li>
           <label>Error message text</label>
