move samuikit to a seperate module, add example usage on /programs page

--- a/src/app/fal/program/program-view.component.html
+++ b/src/app/fal/program/program-view.component.html
@@ -42,6 +42,7 @@
         </span>
     </p>
     <h2 id="overview">Overview</h2>
+    <samLabel labelname="coming-soon-label" [config]="{type:'small', data:'Coming soon'}"></samLabel>
     <!--Objectives-->
     <section *ngIf="oProgram">
       <h3>Objectives:</h3>
