Add in the sam footer, official website banner and amazon style search bar
Created two angular components: samBannerComponent and
samSearchbarComponent. Changed the iae footer to sam footer, and
modified the header to contain only logo.

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,7 +1,6 @@
 <!-- includes HTML for app component-->
 <div>
-
-   <samSpace labelname = "space" ></samSpace>
+    <samBanner></samBanner>
    <samHeader labelname = "header" ></samHeader>
 
 </div>
