--- a/src/app/home/home.style.css
+++ b/src/app/home/home.style.css
@@ -2,3 +2,12 @@
  select {
      margin: 0;
  }
+
+/*Topic image style in browse topic div*/
+.topic-image-link:hover{
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+}
