SGA-220: the header with search bar is mostly working.
Needs css cleanup. Needs unit and e2e tests.

--- a/src/app/home/home.template.html
+++ b/src/app/home/home.template.html
@@ -34,8 +34,9 @@
 
 
   <!--search bar-->
+  <div class="marginCenter">
     <samSearchbar [size]="'large'" (onSearch)="runSearch($event)"></samSearchbar>
-
+  </div>
 
   <!--Browser topics and the register button-->
   <div class="usa-grid-full row m_T-6x">
