--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,17 +1,7 @@
 <!-- includes HTML for app component-->
-<div>
-    <samBanner></samBanner>
-  <samHeader2 (searchEvent)="onHeaderSearchEvent($event.searchText)"></samHeader2>
-
-</div>
-
- <main>
-       <router-outlet></router-outlet>
- </main>
-
-
- <!--samButton (click)='clicked()' labelname = "button" [config] = buttonValue></samButton>
- <samLabel labelname="label" [config] = labelValue></samLabel>
- <samAccordions labelname = "accordions" [config] = accordionsValue></samAccordions>
- <samSelect labelname = "select" [config] = selectValue></samSelect-->
- <samFooter labelname = "footer" ></samFooter>
+<samBanner></samBanner>
+<samHeader2 (searchEvent)="onHeaderSearchEvent($event)"></samHeader2>
+<main>
+  <router-outlet></router-outlet>
+</main>
+<samFooter labelname = "footer" ></samFooter>
