Fix searchbar, add output event on banner
Added output event on banner component so that the header can adjust
accordingly when the banner is closed.

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,6 +1,6 @@
 <!-- includes HTML for app component-->
 <div>
-    <samBanner></samBanner>
+   <samBanner (onClose)="clicked()"></samBanner>
    <samHeader labelname = "header" ></samHeader>
 
 </div>
