--- a/src/app/home/home.template.html
+++ b/src/app/home/home.template.html
@@ -109,16 +109,22 @@
   </div>
 
   <!--Selected Format of Four Topics along with images, shows up when a link is selected-->
-  <div class="usa-width-one-whole">
+  <div class="usa-width-one-whole relative">
 
+    <!--Triangle div to point out which topic detail is currently showing-->
+    <div class="usa-width-one-whole tri-div" *ngIf = "showDetail">
+      <div class="usa-width-one-fourth" [ngClass]="{'tri-down':curTopicTitle==='XYZ1','no-tri-down':curTopicTitle!=='XYZ1'}"></div>
+      <div class="usa-width-one-fourth" [ngClass]="{'tri-down':curTopicTitle==='XYZ2','no-tri-down':curTopicTitle!=='XYZ2'}"></div>
+      <div class="usa-width-one-fourth" [ngClass]="{'tri-down':curTopicTitle==='XYZ3','no-tri-down':curTopicTitle!=='XYZ3'}"></div>
+      <div class="usa-width-one-fourth" [ngClass]="{'tri-down':curTopicTitle==='XYZ4','no-tri-down':curTopicTitle!=='XYZ4'}"></div>
+    </div>
     <!--Selected Image with detail explanation shows up-->
     <div class="usa-width-one-whole m_T-4x topic-detail" *ngIf = "showDetail">
-      <div class="usa-width-one-whole relative">
+      <div class="usa-width-one-whole ">
 
-        <span class="pull-right" style="position: absolute; right: 0"><a (click)="closeTopicDetail()">
+        <span class="pull-right"><a (click)="closeTopicDetail()">
           <i class="fa fa-times-circle"></i></a>
         </span>
-
       </div>
 
       <div class="usa-width-one-whole">
