--- a/src/app/fal/program/program-view.component.html
+++ b/src/app/fal/program/program-view.component.html
@@ -21,11 +21,9 @@
 
   <!--Main Content-->
   <div class="usa-width-three-fourths">
-    <div *ngIf="oProgram && aAlert.length > 0">
-       <div *ngFor="let oAlert of aAlert">
-            <samAlert labelname="oAlert.labelname" [config]="oAlert.config"></samAlert>
-        </div>
-    </div>
+    <template [ngIf]="oProgram && aAlert.length > 0">
+      <samAlert *ngFor="let oAlert of aAlert" labelname="oAlert.labelname" [config]="oAlert.config"></samAlert>
+    </template>
     <div *ngIf="oProgram">
       <h1>
         {{oProgram?.program?.data?.title}}
