Fix for hiding lipsum text, browse topics and adjusting footer
Hide lipsum text, browse topics, let footer show up when scroll down

--- a/src/app/app.style.css
+++ b/src/app/app.style.css
@@ -6,3 +6,8 @@ html, body{
 span.active {
   background-color: gray;
 }
+
+/* Let content occupy most of the page and show footer when scroll down*/
+.occupy-page{
+  min-height: 90vh;
+}
