--- a/src/app/home/home.template.html
+++ b/src/app/home/home.template.html
@@ -25,8 +25,8 @@
 
 
   <!--Introduction to the sam.gov website-->
-  <div class="usa-grid-full m_T-4x m_B-6x">
-    <p class="normal-text">
+  <div class="usa-grid-full m_T-4x m_B-6x" >
+    <p class="normal-text" *ngIf="false">
       Bacon ipsum dolor amet picanha frankfurter jerky, cupim tongue
       drumstick filet mignon ribeye porchetta kevin ground round salami spare ribs.
     </p>
@@ -41,7 +41,7 @@
 
 
   <!--Browser topics and the register button-->
-  <div class="usa-grid-full row m_T-6x">
+  <div class="usa-grid-full row m_T-6x" *ngIf="false">
 
     <!--Browse Topics-->
     <div class="usa-width-one-whole vertical-line">
