--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -4,7 +4,7 @@
   <samHeader2 *ngIf="isHeaderWithSearch" (searchEvent)="onHeaderSearchEvent($event)"></samHeader2>
   <samHeader *ngIf="!isHeaderWithSearch" labelname = "header" ></samHeader>
 </div>
-<main>
+<main class="occupy-page">
   <router-outlet></router-outlet>
 </main>
 <samFooter labelname = "footer" ></samFooter>
