Adding Sticky attribute directive

--- a/src/app/fal/program/program-view.component.html
+++ b/src/app/fal/program/program-view.component.html
@@ -5,7 +5,7 @@
     <br><br>
     <!--<img src="/assets/logo.png">-->
     <!--Side Navigation-->
-    <nav>
+    <nav sam-sticky limit=1200>
       <ul class="usa-sidenav-list">
         <li><a href="{{currentUrl}}#overview">Overview</a></li>
         <li><a href="{{currentUrl}}#authorizations">Authorizations</a></li>
