--- a/src/app/sam-angular-demo/sam-angular-demo.template.html
+++ b/src/app/sam-angular-demo/sam-angular-demo.template.html
@@ -117,3 +117,13 @@
     <pre><code>{{radioModel | json}}</code></pre>
   </div>
 </div>
+<div class="usa-grid">
+  <div class="usa-width-one">
+    <h2>Alert Component &lt;samAlert&gt;</h2>
+    <samAlert2 [type]="'success'" [title]="'Sample Title'" [description]="'lorem ipsum lorem ipsum lorem ipsum lorem ipsum.'"></samAlert2>
+    <samAlert2 [type]="'warning'" [title]="'Sample Title'" [description]="'lorem ipsum lorem ipsum lorem ipsum lorem ipsum.'"></samAlert2>
+    <samAlert2 [type]="'error'" [title]="'Sample Title'" [description]="'lorem ipsum lorem ipsum lorem ipsum lorem ipsum.'"></samAlert2>
+    <samAlert2 [type]="'info'" [title]="'Sample Title'" [description]="'lorem ipsum lorem ipsum lorem ipsum lorem ipsum.'"></samAlert2>
+    <samAlert2 [type]="'infovv'" [title]="'Sample Title'" [description]="'lorem ipsum lorem ipsum lorem ipsum lorem ipsum.'"></samAlert2>
+  </div>
+</div>
