code cleanup for opportunity view page

--- a/src/app/display/opportunities/opportunity-view.component.html
+++ b/src/app/display/opportunities/opportunity-view.component.html
@@ -25,9 +25,7 @@
     <h2 id="overview">Overview</h2>
     <section>
       <h3>Description</h3>
-      <p>
-        {{ oNotice.procurementDescription }}
-      </p>
+      <p id="procurementDesc" [innerHTML]="oNotice.procurementDescription"></p>
     </section>
   </div>
 </div>
