Remove search bar in the search result page
Remove search bar in the search result page. Fix the search bar on the
header.

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,7 +1,7 @@
 <!-- includes HTML for app component-->
 <samBanner #banner></samBanner>
 <div [style.padding-top]="banner.showBanner ? '24px' : ''">
-  <samHeader2 *ngIf="isHeaderWithSearch" (searchEvent)="onHeaderSearchEvent($event)"></samHeader2>
+  <samHeader2 *ngIf="isHeaderWithSearch" (searchEvent)="onHeaderSearchEvent($event)" [keyword]="keyword" [filterValue]="index"></samHeader2>
   <samHeader *ngIf="!isHeaderWithSearch" labelname = "header" ></samHeader>
 </div>
 <main class="occupy-page">
