--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -3,7 +3,7 @@
 		<h1>SAM.gov Search Results</h1>
 	</div>
   <div class="usa-width-one">
-    <samSearchbar (onSearch)="onSearchClick($event)" [keyword]="keyword" [placeholder]="'#keyword'"></samSearchbar>
+    <samSearchbar (onSearch)="onSearchClick($event)" [keyword]="keyword" [placeholder]="'#keyword'" *ngIf="false"></samSearchbar>
     <!--<form class="usa-search usa-search-big m_B-3x" (ngSubmit)="runSearch(true)" #f="ngForm">-->
       <!--<div class="usa-width-one-fourth">-->
         <!--<label for="index" class="usa-sr-only">Select an index</label>-->
@@ -21,7 +21,7 @@
         <!--</button>-->
       <!--</div>-->
     <!--</form>-->
-    <div class="usa-width-one">
+    <div *ngIf="showOptional" class="usa-width-one">
 
       <h3>Common Filters:</h3>
       <fh-input #fhInput [hideOffice]="true" (organization)="onOrganizationChange($event)"></fh-input>
