part 2 at folder and class naming refactor

--- a/src/app/sam-angular-demo/sam-angular-demo.template.html
+++ b/src/app/sam-angular-demo/sam-angular-demo.template.html
@@ -1,14 +1,14 @@
 <div class="usa-grid">
   <h2>Select Component &lt;samSelect&gt;</h2>
   <div class="usa-width-one-third">
-    <samSelect2
+    <samSelect
       [(model)]="selectModel"
       [options]="selectConfig.options"
       [label]="selectConfig.label"
       [hint]="selectConfig.hint"
       [errorMessage]="selectConfig.errorMessage"
       [disabled]="selectConfig.disabled">
-    </samSelect2>
+    </samSelect>
   </div>
   <div class="usa-width-one-third">
     <fieldset class="usa-fieldset-inputs usa-sans">
@@ -85,13 +85,13 @@
 <div class="usa-grid">
   <h2>Radiobuttons Component &lt;samRadioButtons&gt;</h2>
   <div class="usa-width-one-third">
-    <samRadioButtons2
+    <samRadioButton2
       [(model)]="radioModel"
       [options]="radioConfig.options"
       [label]="radioConfig.label"
       [hint]="radioConfig.hint"
       [errorMessage]="radioConfig.errorMessage">
-    </samRadioButtons2>
+    </samRadioButton2>
   </div>
   <div class="usa-width-one-third">
     <fieldset class="usa-fieldset-inputs usa-sans">
