--- a/src/app/sam-angular-demo/sam-angular-demo.template.html
+++ b/src/app/sam-angular-demo/sam-angular-demo.template.html
@@ -1,4 +1,11 @@
 <div class="usa-grid">
+  <h2>Label Component &lt;samLabel&gt;</h2>
+  <div class="usa-width-one-sixth">
+    <samLabel [type]="'big'" [labelName]="'BigLabel'" [labelData]="'Big Label'"></samLabel>
+  </div>
+  <div class="usa-width-one-sixth">
+    <samLabel [type]="'small'" [labelName]="'SmallLabel'" [labelData]="'Small Label'"></samLabel>
+  </div>
   <h2>Select Component &lt;samSelect&gt;</h2>
   <div class="usa-width-one-third">
     <samSelect2
