--- a/src/app/sam-angular-demo/sam-angular-demo.template.html
+++ b/src/app/sam-angular-demo/sam-angular-demo.template.html
@@ -1,4 +1,33 @@
 <div class="usa-grid">
+  <h2>Button Component &lt;samButton&gt;</h2>
+  <div class="usa-width-one-whole">
+    <div class="usa-width-one-fourth">
+      <samButton [labelName]="'defaultBtn'" [labelData]="'Default'" [type]="'default'"></samButton>
+    </div>
+    <div class="usa-width-one-fourth">
+      <samButton [labelName]="'altBtn'" [labelData]="'Alt'" [type]="'alt'"></samButton>
+    </div>
+    <div class="usa-width-one-fourth">
+      <samButton [labelName]="'secondaryBtn'" [labelData]="'Secondary'" [type]="'secondary'"></samButton>
+    </div>
+    <div class="usa-width-one-fourth">
+      <samButton [labelName]="'grayBtn'" [labelData]="'Gray'" [type]="'gray'"></samButton>
+    </div>
+  </div>
+  <div class="usa-width-one-whole">
+    <div class="usa-width-one-fourth">
+      <samButton [labelName]="'outlineBtn'" [labelData]="'Outline'" [type]="'outline'"></samButton>
+    </div>
+    <div class="usa-width-one-fourth">
+      <samButton [labelName]="'invertedBtn'" [labelData]="'Inverted'" [type]="'inverted'"></samButton>
+    </div>
+    <div class="usa-width-one-fourth">
+      <samButton [labelName]="'disabledBtn'" [labelData]="'Disabled'" [type]="'disabled'"></samButton>
+    </div>
+    <div class="usa-width-one-fourth">
+      <samButton [labelName]="'bigBtn'" [labelData]="'Big'" [type]="'big'"></samButton>
+    </div>
+  </div>
   <h2>Select Component &lt;samSelect&gt;</h2>
   <div class="usa-width-one-third">
     <samSelect2
