Change variable name per Justin comment

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -2,30 +2,30 @@
   <h2>Button Component &lt;samButton&gt;</h2>
   <div class="usa-width-one-whole">
     <div class="usa-width-one-fourth">
-      <samButton [labelName]="'defaultBtn'" [labelData]="'Default'" [type]="'default'"></samButton>
+      <samButton [buttonId]="'defaultBtn'" [buttonData]="'Default'" [type]="'default'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [labelName]="'altBtn'" [labelData]="'Alt'" [type]="'alt'"></samButton>
+      <samButton [buttonId]="'altBtn'" [buttonData]="'Alt'" [type]="'alt'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [labelName]="'secondaryBtn'" [labelData]="'Secondary'" [type]="'secondary'"></samButton>
+      <samButton [buttonId]="'secondaryBtn'" [buttonData]="'Secondary'" [type]="'secondary'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [labelName]="'grayBtn'" [labelData]="'Gray'" [type]="'gray'"></samButton>
+      <samButton [buttonId]="'grayBtn'" [buttonData]="'Gray'" [type]="'gray'"></samButton>
     </div>
   </div>
   <div class="usa-width-one-whole">
     <div class="usa-width-one-fourth">
-      <samButton [labelName]="'outlineBtn'" [labelData]="'Outline'" [type]="'outline'"></samButton>
+      <samButton [buttonId]="'outlineBtn'" [buttonData]="'Outline'" [type]="'outline'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [labelName]="'invertedBtn'" [labelData]="'Inverted'" [type]="'inverted'"></samButton>
+      <samButton [buttonId]="'invertedBtn'" [buttonData]="'Inverted'" [type]="'inverted'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [labelName]="'disabledBtn'" [labelData]="'Disabled'" [type]="'disabled'"></samButton>
+      <samButton [buttonId]="'disabledBtn'" [buttonData]="'Disabled'" [type]="'disabled'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [labelName]="'bigBtn'" [labelData]="'Big'" [type]="'big'"></samButton>
+      <samButton [buttonId]="'bigBtn'" [buttonData]="'Big'" [type]="'big'"></samButton>
     </div>
   </div>
   <h2>Select Component &lt;samSelect&gt;</h2>
