Change variables name

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -1,10 +1,10 @@
 <div class="usa-grid">
   <h2>Label Component &lt;samLabel&gt;</h2>
   <div class="usa-width-one-sixth">
-    <samLabel [type]="'big'" [labelName]="'BigLabel'" [labelData]="'Big Label'"></samLabel>
+    <samLabel [labelType]="'big'" [labelId]="'BigLabel'" [labelData]="'Big Label'"></samLabel>
   </div>
   <div class="usa-width-one-sixth">
-    <samLabel [type]="'small'" [labelName]="'SmallLabel'" [labelData]="'Small Label'"></samLabel>
+    <samLabel [labelType]="'small'" [labelId]="'SmallLabel'" [labelData]="'Small Label'"></samLabel>
   </div>
   <h2>Select Component &lt;samSelect&gt;</h2>
   <div class="usa-width-one-third">
