Change variable name

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -2,30 +2,30 @@
   <h2>Button Component &lt;samButton&gt;</h2>
   <div class="usa-width-one-whole">
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'defaultBtn'" [buttonData]="'Default'" [type]="'default'"></samButton>
+      <samButton [buttonId]="'defaultBtn'" [buttonData]="'Default'" [buttonType]="'default'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'altBtn'" [buttonData]="'Alt'" [type]="'alt'"></samButton>
+      <samButton [buttonId]="'altBtn'" [buttonData]="'Alt'" [buttonType]="'alt'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'secondaryBtn'" [buttonData]="'Secondary'" [type]="'secondary'"></samButton>
+      <samButton [buttonId]="'secondaryBtn'" [buttonData]="'Secondary'" [buttonType]="'secondary'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'grayBtn'" [buttonData]="'Gray'" [type]="'gray'"></samButton>
+      <samButton [buttonId]="'grayBtn'" [buttonData]="'Gray'" [buttonType]="'gray'"></samButton>
     </div>
   </div>
   <div class="usa-width-one-whole">
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'outlineBtn'" [buttonData]="'Outline'" [type]="'outline'"></samButton>
+      <samButton [buttonId]="'outlineBtn'" [buttonData]="'Outline'" [buttonType]="'outline'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'invertedBtn'" [buttonData]="'Inverted'" [type]="'inverted'"></samButton>
+      <samButton [buttonId]="'invertedBtn'" [buttonData]="'Inverted'" [buttonType]="'inverted'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'disabledBtn'" [buttonData]="'Disabled'" [type]="'disabled'"></samButton>
+      <samButton [buttonId]="'disabledBtn'" [buttonData]="'Disabled'" [buttonType]="'disabled'"></samButton>
     </div>
     <div class="usa-width-one-fourth">
-      <samButton [buttonId]="'bigBtn'" [buttonData]="'Big'" [type]="'big'"></samButton>
+      <samButton [buttonId]="'bigBtn'" [buttonData]="'Big'" [buttonType]="'big'"></samButton>
     </div>
   </div>
   <h2>Select Component &lt;samSelect&gt;</h2>
